--- a/src/components/Review/_reviews.scss
+++ b/src/components/Review/_reviews.scss
@@ -28,7 +28,7 @@
   height: auto;
   padding: 12px 167px 14px 14px;
   background: #232834;
-  border-radius: 4px;
+  border-radius: var(--card-border-radius);
 
   &:not(:last-child) {
     margin-bottom: 15px;
@@ -46,13 +46,13 @@
 
   &__ava {
     position: relative;
+    overflow: hidden;
     z-index: 1;
     flex: 0 0 auto;
     width: 44px;
     height: 44px;
     background: var(--color-gray);
     border-radius: 50%;
-    overflow: hidden;
 
     img {
       width: 100%;
@@ -62,11 +62,12 @@
   }
 
   &__name {
-    font-family: Inter, sans-serif;
+    font-family: var(--font-base);
     font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: 0.2em;
+
+    // font-size: 22px;
+    // line-height: 27px;
+    letter-spacing: 0.1em;
   }
 
   &__content {
@@ -75,21 +76,12 @@
 
   &__data {
     margin-top: 5px;
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: #fff;
-    opacity: 0.26;
+    color: rgba(#fff, 0.26);
     letter-spacing: 0.2em;
   }
 
-  &__text {
-    font-family: Inter, sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-  }
+  // &__text {
+  // }
 }
 
 @include r($md) {
@@ -104,16 +96,6 @@
 
     &__more {
       width: 100%;
-    }
-  }
-
-  .rev-card {
-    &__text {
-      font-size: 12px;
-    }
-
-    &__name {
-      font-size: 18px;
     }
   }
 }
