--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 @import 'theme';
 
-@import 'vendor/bootstrap';
+@import 'vendor/bootstrap-reboot';
 @import 'react-photo-view/dist/react-photo-view.css';
 
 @import 'layout/fonts';
@@ -9,3 +9,4 @@
 @import 'layout/grid';
 @import 'layout/page';
 @import 'layout/typography';
+@import 'dev';
