--- a/src/assets/styles/layout/_fonts.scss
+++ b/src/assets/styles/layout/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?Inter:wght@500;600;700&family=Radio+Canada:wght@500;600;700&family=Raleway:wght@600;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?Inter:wght@500;600;700&family=Radio+Canada:wght@500;600;700&family=Raleway:wght@600;700;800;900&display=swap');
