--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -1,5 +1,4 @@
 * {
-  box-sizing: border-box;
   outline: none;
 }
 
@@ -18,12 +17,11 @@ a {
 body {
   margin: 0;
   font-family: var(--font-base);
-  font-weight: 600;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1;
   color: var(--color-font);
-  background: linear-gradient(0deg, #010206, #010206),
-    linear-gradient(180deg, #1d5fdd 0%, #002e88 51.56%, #00102e 100%);
+  background: var(--body-background);
   touch-action: pan-y;
   text-size-adjust: none;
 
