--- a/src/components/Atom/Accardeon/_accordeon.scss
+++ b/src/components/Atom/Accardeon/_accordeon.scss
@@ -12,13 +12,14 @@
     position: relative;
     width: 100%;
     padding: 30px 96px 32px;
+    font-family: var(--font-accent);
     font-weight: 900;
     font-size: 20px;
     line-height: 23px;
     text-align: left;
     color: #fff;
     background: #191f2c;
-    border-radius: 4px;
+    border-radius: var(--ui-border-radius);
     transition: color 0.25s $ease;
     cursor: pointer;
 
@@ -68,13 +69,13 @@
   }
 
   &__dropdown {
+    overflow: hidden;
     margin-top: -100%;
     margin-left: 0;
     padding: 0 40px 0 94px;
     background: #232834;
-    border-radius: 4px;
+    border-radius: var(--ui-border-radius);
     transition: margin-top 0.3s ease-in;
-    overflow: hidden;
 
     &._active {
       margin-top: 0;
@@ -84,6 +85,7 @@
   &__text {
     max-width: 897px;
     padding-bottom: 40px;
+    font-family: var(--font-accent);
     font-weight: 600;
     font-size: 16px;
     line-height: 19px;
