--- a/src/components/Product/ProductsSlider/_products-slider.scss
+++ b/src/components/Product/ProductsSlider/_products-slider.scss
@@ -1,5 +1,6 @@
 .slider {
-  overflow: visible;
+  // overflow: visible;
+  overflow: hidden;
 
   &__title {
     position: relative;
@@ -9,11 +10,11 @@
 
   &__card {
     position: relative;
-    display: block;
+    display: inline-block;
     z-index: 2;
     font-size: 0;
     box-sizing: border-box;
-    border: inset 7px solid rgb(218 218 218 / 34%);
+    border: 7px inset rgb(218 218 218 / 34%);
 
     // &::after {
     //   position: absolute;
@@ -24,7 +25,7 @@
 
     img {
       max-width: 100%;
-      max-height: 420px;
+      max-height: 500px;
       object-fit: cover;
       object-position: center center;
       user-select: none;
@@ -32,7 +33,9 @@
   }
 
   .swiper {
-    overflow: visible;
+    // overflow: visible;
+    width: 100%;
+    height: 500px;
   }
 
   .swiper-wrapper {
@@ -40,16 +43,58 @@
   }
 
   .swiper-slide {
+    display: flex;
     flex: 0 0 auto;
+    align-items: center;
     width: auto;
-    opacity: 0.8;
-    transition: transform 0.5s $ease;
-    will-change: transform;
+    border-radius: 18px;
+  }
+
+  // opacity: 0.8;
+  // transition: transform 0.5s $ease;
+  // will-change: transform;
+
+  // &.swiper-slide-active {
+  //   z-index: 5;
+  //   opacity: 1;
+  //   transform: scale(1.2);
+  // }
+  // }
+}
+
+// TEMP - choose one
+
+.slider._compact {
+  overflow: hidden;
+  margin-top: 80px;
+
+  .slider {
+    &__card {
+      img {
+        max-height: 320px;
+      }
+    }
+  }
+
+  .swiper-wrapper {
+    padding: 90px 0;
+  }
+
+  .swiper-slide {
+    transition: none;
 
     &.swiper-slide-active {
-      z-index: 5;
-      opacity: 1;
-      transform: scale(1.2);
+      transform: scale(1.5);
+    }
+
+    &.swiper-slide-prev {
+      transform: translateX(60%);
+      transition: transform 0.5s $ease;
+    }
+
+    &.swiper-slide-next {
+      transform: translateX(-60%);
+      transition: transform 0.5s $ease;
     }
   }
 }
