--- a/src/components/Ui/Button/_button.scss
+++ b/src/components/Ui/Button/_button.scss
@@ -2,12 +2,12 @@
   display: inline-flex;
   justify-content: center;
   padding: 16px 52px;
-  font-family: var(--font-canada);
+  font-family: var(--font-alt);
   font-weight: 600;
   font-size: 26px;
   line-height: calc(31 / 26);
   border: 0;
-  border-radius: 4px;
+  border-radius: var(--button-border-radius);
   transition: background 0.1s $ease, color 0.1s $ease;
   cursor: pointer;
 
