--- a/src/components/Ui/Modal/_modal.scss
+++ b/src/components/Ui/Modal/_modal.scss
@@ -29,8 +29,8 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    transition: background 0.25s $ease;
     will-change: background;
+    transition: background 0.25s $ease;
   }
 
   &__body {
@@ -46,10 +46,10 @@
     border-radius: 6px;
     opacity: 0;
     transform: translate3d(0, 20px, 0);
+    will-change: transform;
     transition: transform 0.25s $ease, opacity 0.25s $ease;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    will-change: transform;
   }
 
   &__head {
@@ -172,7 +172,7 @@
       right: 10px;
     }
 
-    &__pic {
+    &__image {
       width: 100%;
     }
   }
