--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -145,6 +145,11 @@ header {
   overflow: hidden;
 }
 
+img {
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
 .tac {
   text-align: center;
 }
