--- a/src/components/Product/ProductsSlider/_products-slider.scss
+++ b/src/components/Product/ProductsSlider/_products-slider.scss
@@ -1,6 +1,31 @@
 .slider {
-  // overflow: visible;
-  overflow: hidden;
+  position: static;
+  overflow: visible;
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: ' ';
+    display: inline-block;
+    top: 0;
+    z-index: 2;
+    width: 200px;
+    height: 100vh;
+    border-radius: 6px;
+    pointer-events: none;
+
+    // mix-blend-mode: overlay;
+  }
+
+  &::before {
+    left: 0;
+    background: linear-gradient(to right, rgba(#000, 0.7) 0%, rgb(0 0 0 / 0%) 100%);
+  }
+
+  &::after {
+    right: 0;
+    background: linear-gradient(to left, rgba(#000, 0.7) 0%, rgb(0 0 0 / 0%) 100%);
+  }
 
   &__title {
     position: relative;
@@ -14,18 +39,20 @@
     z-index: 2;
     font-size: 0;
     box-sizing: border-box;
-    border: 7px inset rgb(218 218 218 / 34%);
 
-    // &::after {
-    //   position: absolute;
-    //   content: ' ';
-    //   display: inline-block;
-    //   border: 7px solid rgb(218 218 218 / 34%);
-    // }
+    // border: 7px inset rgb(218 218 218 / 34%);
+
+    &::after {
+      position: absolute;
+      content: ' ';
+      display: inline-block;
+      inset: 0;
+      border: 7px solid rgb(218 218 218 / 34%);
+    }
 
     img {
       max-width: 100%;
-      max-height: 500px;
+      max-height: 420px;
       object-fit: cover;
       object-position: center center;
       user-select: none;
@@ -33,7 +60,7 @@
   }
 
   .swiper {
-    // overflow: visible;
+    overflow: visible;
     width: 100%;
     height: 500px;
   }
@@ -47,54 +74,62 @@
     flex: 0 0 auto;
     align-items: center;
     width: auto;
+    max-width: 80vw;
     border-radius: 18px;
+    opacity: 0.7;
+    will-change: transform;
+    transition: transform 0.5s $ease, opacity 0.25s $ease;
+
+    &.swiper-slide-active {
+      z-index: 5;
+      opacity: 1;
+      transform: scale(1.2);
+    }
   }
-
-  // opacity: 0.8;
-  // transition: transform 0.5s $ease;
-  // will-change: transform;
-
-  // &.swiper-slide-active {
-  //   z-index: 5;
-  //   opacity: 1;
-  //   transform: scale(1.2);
-  // }
-  // }
 }
 
 // TEMP - choose one
 
-.slider._compact {
-  overflow: hidden;
-  margin-top: 80px;
+// .slider._compact {
+//   overflow: hidden;
+//   margin-top: 80px;
 
+//   .slider {
+//     &__card {
+//       img {
+//         max-height: 320px;
+//       }
+//     }
+//   }
+
+//   .swiper-wrapper {
+//     padding: 90px 0;
+//   }
+
+//   .swiper-slide {
+//     transition: none;
+
+//     &.swiper-slide-active {
+//       transform: scale(1.5);
+//     }
+
+//     &.swiper-slide-prev {
+//       transform: translateX(60%);
+//       transition: transform 0.5s $ease;
+//     }
+
+//     &.swiper-slide-next {
+//       transform: translateX(-60%);
+//       transition: transform 0.5s $ease;
+//     }
+//   }
+// }
+
+@include r($lg) {
   .slider {
-    &__card {
-      img {
-        max-height: 320px;
-      }
-    }
-  }
-
-  .swiper-wrapper {
-    padding: 90px 0;
-  }
-
-  .swiper-slide {
-    transition: none;
-
-    &.swiper-slide-active {
-      transform: scale(1.5);
-    }
-
-    &.swiper-slide-prev {
-      transform: translateX(60%);
-      transition: transform 0.5s $ease;
-    }
-
-    &.swiper-slide-next {
-      transform: translateX(-60%);
-      transition: transform 0.5s $ease;
+    &::before,
+    &::after {
+      display: none;
     }
   }
 }
