--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -5,28 +5,34 @@
   z-index: 3;
   flex-direction: column;
   align-items: center;
-  width: 21%;
-  margin-bottom: 85px;
+  width: 100%;
+  max-width: min-content;
+  min-width: 1px;
   transition: all 0.25s $ease;
 
   &__name {
     position: absolute;
-    top: 30%;
     left: 0;
+    bottom: 70%;
+    z-index: 1;
     width: 100%;
+    min-width: 1px;
     margin: 0 auto;
     margin-left: 0;
     font-family: var(--font-accent);
     font-weight: 700;
-    font-size: 14px; // conflicts design 24
+    font-size: 18px; // conflicts design 24
     line-height: calc(28 / 24);
     text-align: center;
     color: #fff;
     opacity: 0;
-    transition: 0.3s;
+    will-change: top;
+    transition: all 0.3s $ease;
   }
 
   &__top {
+    position: relative;
+    z-index: 2;
     width: 242px;
     height: 203px;
     background-size: 100%;
@@ -79,7 +85,7 @@
 
   &:hover {
     .product-card__name {
-      top: -60px;
+      bottom: calc(100% + 16px);
       opacity: 1;
     }
 
@@ -94,34 +100,31 @@
   }
 }
 
-@include r($xl) {
-  .product-card {
-    width: 26%;
-  }
-}
+// @include r($xl) {
+//   .product-card {
+//     width: 26%;
+//   }
+// }
 
 @include r($lg) {
   .product-card {
-    width: 36%;
+    // width: 36%;
+
+    &__name {
+      background: #000; // TODO - site color
+    }
   }
 }
 
 @include r($sm) {
   .product-card {
-    width: 100%;
-    margin-bottom: 25px;
-
-    &__box {
-      left: 50%;
-      margin-left: -117px;
-    }
-
-    &:hover {
-      .product-card {
-        &__name {
-          top: 0;
-        }
-      }
+    &__name {
+      position: static;
+      width: 100%;
+      max-width: 320px;
+      margin: 0 auto 16px;
+      font-size: 18px;
+      opacity: 1;
     }
   }
 }
