product page refactor

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,3 +8,9 @@
 @import 'layout/page';
 @import 'layout/typography';
 @import 'dev';
+@import 'swiper/css';
+@import 'swiper/scss/autoplay';
+@import 'swiper/scss/free-mode';
+@import 'swiper/scss/mousewheel';
+@import 'swiper/scss/thumbs';
+@import 'swiper/scss/grid';
