--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -33,6 +33,7 @@
   --color-primary-rgb: #{hexToRbg(#ffba01)};
   --color-primary-hover: #ffde84;
   --color-accent: #600728;
+  --color-accent-rgb: #{hexToRbg(#600728)};
   --color-green: #458940;
   --color-red: #d53536;
 
