ssr update, product page api

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -2,7 +2,8 @@
 @import 'theme';
 @import 'vendor/bootstrap-reboot';
 @import 'react-photo-view/dist/react-photo-view.css';
-@import 'layout/fonts';
+
+// @import 'layout/fonts';
 @import 'layout/general';
 @import 'layout/grid';
 @import 'layout/page';
