--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -84,7 +84,7 @@ h6,
 }
 
 .p-regular {
-  font-family: var(--font-alt);
+  font-family: var(--font-base);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.42;
