--- a/src/components/Product/_home.scss
+++ b/src/components/Product/_home.scss
@@ -4,6 +4,10 @@
   padding: 192px 0 25px;
   border-bottom: 4px solid #3f1e01;
 
+  &._has-logo {
+    padding-top: 0;
+  }
+
   &__fire {
     position: absolute;
     top: -105px;
@@ -15,6 +19,17 @@
 
   &__products {
     margin-top: 100px;
+  }
+
+  &__logo {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0 10px;
+    font-size: 0;
+
+    img {
+      max-width: 100%;
+    }
   }
 
   &__category {
@@ -65,12 +80,12 @@
     }
   }
 
-  &__category-bg {
+  &__category-decor {
     position: absolute;
-    top: 10px;
-    left: -312px;
-    z-index: -1;
-    width: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 420px;
   }
 }
 
