theme updates, navigation fixes

--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -93,7 +93,7 @@ h6,
 .p-small {
   font-family: var(--font-base);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.42;
 }
 
@@ -108,6 +108,88 @@ h6,
 
   .p-small {
     font-size: 12px;
+  }
+}
+
+// wysiwyg
+.wysiwyg {
+  font-size: 16px;
+  line-height: 1.42;
+
+  h1 {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 50px;
+    line-height: calc(59 / 50);
+  }
+
+  h2 {
+    font-weight: 800;
+    font-size: 34px;
+    line-height: 40px;
+  }
+
+  h3 {
+    font-weight: 900;
+    font-size: 30px;
+    line-height: calc(35 / 30);
+  }
+
+  h4 {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: calc(28 / 24);
+  }
+
+  h5 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(24 / 20);
+  }
+
+  h6 {
+    font-weight: 900;
+    font-size: 18px;
+    line-height: calc(21 / 18);
+  }
+
+  p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.42;
+  }
+
+  p,
+  ul,
+  ol,
+  img,
+  button,
+  blockquote,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  table {
+    & + p,
+    & + ul,
+    & + ol,
+    & + blockquote,
+    & + table {
+      margin-top: 1.58em;
+    }
+
+    & + button,
+    & + img,
+    & + h1,
+    & + h2,
+    & + h3,
+    & + h4,
+    & + h5,
+    & + h6 {
+      margin-top: 1.5em;
+    }
   }
 }
 
