--- a/src/components/Ui/Button/_button.scss
+++ b/src/components/Ui/Button/_button.scss
@@ -5,7 +5,7 @@
   font-family: var(--font-base);
   font-weight: 600;
   font-size: 26px;
-  line-height: calc(31 / 26);
+  line-height: 1.32;
   border: 0;
   border-radius: var(--button-border-radius);
   transition: background 0.1s $ease, color 0.1s $ease;
