--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -2,16 +2,17 @@
 @import 'theme';
 @import 'vendor/bootstrap-reboot';
 @import 'react-photo-view/dist/react-photo-view.css';
-
-// @import 'layout/fonts';
-@import 'layout/general';
-@import 'layout/grid';
-@import 'layout/page';
-@import 'layout/typography';
-@import 'dev';
+@import 'react-toastify/dist/ReactToastify.css';
 @import 'swiper/css';
 @import 'swiper/scss/autoplay';
 @import 'swiper/scss/free-mode';
 @import 'swiper/scss/mousewheel';
 @import 'swiper/scss/thumbs';
 @import 'swiper/scss/grid';
+
+/* @import 'layout/fonts'; */
+@import 'layout/general';
+@import 'layout/grid';
+@import 'layout/page';
+@import 'layout/typography';
+@import 'dev';
