--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -116,47 +116,116 @@ h6,
   font-size: 16px;
   line-height: 1.42;
 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: var(--font-base);
+  }
+
   h1 {
     font-style: normal;
-    font-weight: 900;
-    font-size: 50px;
-    line-height: calc(59 / 50);
+    font-weight: 800;
+    font-size: 32px;
+    line-height: calc(39 / 32);
   }
 
   h2 {
-    font-weight: 800;
-    font-size: 34px;
-    line-height: 40px;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: calc(34 / 28);
   }
 
   h3 {
-    font-weight: 900;
-    font-size: 30px;
-    line-height: calc(35 / 30);
+    font-weight: 500;
+    font-size: 24px;
+    line-height: calc(29 / 24);
   }
 
   h4 {
-    font-weight: 900;
-    font-size: 24px;
-    line-height: calc(28 / 24);
-  }
-
-  h5 {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 20px;
     line-height: calc(24 / 20);
   }
 
-  h6 {
-    font-weight: 900;
+  h5 {
+    font-weight: 500;
     font-size: 18px;
-    line-height: calc(21 / 18);
+    line-height: calc(22 / 18);
+  }
+
+  h6 {
+    font-style: italic;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: calc(22 / 18);
+  }
+
+  h4,
+  h5,
+  h6 {
+    color: rgba(#fff, 0.6);
   }
 
   p {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.42;
+
+    a {
+      text-decoration-line: underline;
+      color: var(--color-primary);
+      transition: color 0.25s $ease;
+
+      &:hover {
+        color: var(--color-font);
+      }
+    }
+  }
+
+  ul,
+  li {
+    list-style: none;
+
+    li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 4px;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.42;
+
+      &::before {
+        display: inline-block;
+        flex: 0 0 auto;
+      }
+    }
+  }
+
+  ul {
+    li {
+      &::before {
+        content: '';
+        width: 6px;
+        height: 6px;
+        margin-right: 8px;
+        background: currentcolor;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  ol {
+    counter-reset: listcounter;
+
+    li {
+      &::before {
+        content: counter(listcounter) ' ';
+        counter-increment: listcounter;
+      }
+    }
   }
 
   p,
