--- a/src/components/Order/LastPurchases/_purchases.scss
+++ b/src/components/Order/LastPurchases/_purchases.scss
@@ -15,6 +15,7 @@
   &__slide {
     position: relative;
     overflow: hidden;
+    display: block;
     z-index: 1;
     height: 77px;
     background: radial-gradient(50% 50% at 50% 50%, #ffba01 12.5%, #d35e00 100%);
